# claude_project_packager

./: .gitignore  README.md  ROADMAP.md  __init__.py  core.py  file_processing.py  gitignore.py  main.py  pyproject.toml  xml_generator.py
project_packager/: __init__.py  __main__.py  core.py  file_processing.py  git_integration.py  gitignore.py  json_generator.py  main.py  mime_types.py  xml_generator.py
